--- a/javascript/node/projeto/package.json
+++ b/javascript/node/projeto/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "funcionarios",
+  "name": "projeto",
   "version": "1.0.0",
-  "main": "funcionarios.js",
+  "main": "src/servidor.js",
   "scripts": {
     "start": "nodemon",
-    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "leo",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
+    "express": "4.16.2",
     "nodemon": "^3.1.7"
   }
 }
