--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-schedule": "1.3.0"
   }
 }
